[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "balchecker/"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Jacob Centner", email = "31484717+jcentner@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Jacob Centner/balchecker/#readme"
Issues = "https://github.com/Jacob Centner/balchecker//issues"
Source = "https://github.com/Jacob Centner/balchecker/"

[tool.hatch.version]
path = "src/balchecker//__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/balchecker/ tests}"

[tool.coverage.run]
source_pkgs = ["balchecker/", "tests"]
branch = true
parallel = true
omit = [
  "src/balchecker//__about__.py",
]

[tool.coverage.paths]
balchecker/ = ["src/balchecker/", "*/balchecker//src/balchecker/"]
tests = ["tests", "*/balchecker//tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
