[project]
name = "balchecker"
version = "0.1.0"
description = "A Flask webapp to connect to Phantom wallet and check a custom token balance."
readme = "README.md"
dependencies = [
  "Flask>=2.0",
  "solana>=0.20",
]

[tool.hatch.envs.default]
dependencies = [
  "Flask>=2.0",
  "solana>=0.20",
]

[tool.hatch.commands]
start = { command = "python app.py" }

[project.urls]
Documentation = "https://github.com/Jacob Centner/balchecker/#readme"
Issues = "https://github.com/Jacob Centner/balchecker//issues"
Source = "https://github.com/Jacob Centner/balchecker/"